--- a/todo.html
+++ b/todo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="myDIV" class="header">
-        <h2>My To Do List</h2>
+        <h2> To Do List</h2>
         <input type="text" id="myInput" placeholder="Title...">
         <span onclick="newElement()" class="addBtn">Add</span>
       </div>
